style.css
body {
    font-family: 'Rajdhani', sans-serif; /* Define font options here */
    background-color: #ffffff; /* Currently set to white background */
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column; /* Allow the footer to be at the bottom */
    align-items: center; /* Center align items */
    min-height: 100vh; /* Ensure the body takes the full height of the viewport to avoid scrollin */
}

.container {
    display: flex;
    flex-direction: column-reverse; /* Display left side at the bottom on smaller screens for phone compatibility*/
    gap: 20px;
    max-width: 1200px;
    padding: 20px;
    box-sizing: border-box;
    width: 100%;
}

.left-side {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    flex: 1;
}

.image-wrapper {
    position: relative;
}

.profile-image {
    max-width: 300px; /* Adjust the max-width */
    width: 100%;
    vertical-align: top; /* Align top of image with top of text */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add grid below the image */
}

.image-wrapper::before {
    content: '';
    position: absolute;
    top: 10px;
    left: 10px;
    width: 100%;
    height: 100%;
    background: repeating-linear-gradient(
        45deg,
        rgba(128, 128, 128, 0.8) 0,
        rgba(128, 128, 128, 0.8) 2px,
        transparent 2px,
        transparent 4px
    );
    z-index: -1;
}

.contact-info {
    margin-top: 20px;
    font-size: 1.2em;
}

.social-icons {
    display: flex;
    justify-content: center; /* Center align social icons */
    gap: 10px; /* Add some space between the icons */
}

.social-icons img {
    width: 40px; /* Adjust icon size */
    margin: 10px 0; /* Add vertical margin to social icons */
    transition: transform 0.3s ease; /* Smooth transition for hover effect */
}

.social-icons img:hover {
    transform: scale(1.1); /* Slightly enlarge the icon on hover */
}

.icon.scholar img:hover {
    content: url('icons/googlescholar_hover.svg');
}

.icon.github img:hover {
    content: url('icons/github_hover.svg');
}

.icon.linkedin img:hover {
    content: url('icons/linkedin_hover.svg');
}

.icon.x-twitter img:hover {
    content: url('icons/x_hover.svg');
}

.right-side {
    display: flex;
    flex-direction: column;
    justify-content: flex-start; /* Align the content to the start */
    flex: 2; /* Make the right side take 2 parts of the available space */
    padding-left: 40px; /* Add padding to the left of the text */
}

h1 {
    font-size: 2.5em;
    color: #333;
    margin-top: 0; /* Ensure the header and image align */
}

.intro {
    font-size: 1.2em;
    line-height: 1.6;
    margin-bottom: 20px;
}

a {
    color: #007BFF; /* Shiny blue for links */
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.highlight {
    color: #007BFF; /* Shiny blue for highlighted text */
    font-weight: bold; /* Bold highlighted text */
}

.footer-text {
    color: #666666; /* Slightly lighter color */
    font-size: 0.9em;
    margin-top: 20px; /* Space above the footer text */
    text-align: center; /* Center the footer text */
}

@media (min-width: 768px) {
    .container {
        flex-direction: row;
        margin-top: 5vh; /* Adjust top margin on larger screens */
    }

    .left-side {
        flex: 1;
        align-items: center; /* Center align items */
    }

    .right-side {
        flex: 2;
        padding-left: 40px; /* Add padding to the left of the text */
    }

    .footer-text {
        margin-top: 20px; /* Ensure footer is at the bottom */
    }
}

